2010-05-30  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_move_to_visually_next): Make sure the sentinel
	state is always cached (bug#6306).

2010-05-29  Eli Zaretskii  <eliz@gnu.org>

	Fix cursor motion in bidi-reordered continued lines.
	* xdisp.c (try_cursor_movement): Backup to non-continuation line
	only after finding point's row.  Fix the logic.  Rewrite the loop
	over continuation lines in bidi-reordered buffers.  Return
	CURSOR_MOVEMENT_MUST_SCROLL upon failure to find a suitable row,
	rather than CURSOR_MOVEMENT_CANNOT_BE_USED.

2010-05-28  Michael Albinus  <michael.albinus@gmx.de>

	* fileio.c (Fdelete_file): Pass TRASH arg to handler call.

2010-05-28  Kenichi Handa  <handa@m17n.org>

	* font.c (font_delete_unmatched): Check Vface_ignored_fonts.
	Don't sheck SPEC if it is nil.
	(font_list_entities): Call font_delete_unmatched if
	Vface_ignored_fonts is non-nil.  (Bug#6287)

2010-05-28  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (LIBES): Remove $LOADLIBES, it is never set.

2010-05-27  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Fdelete_file): Change meaning of optional arg to mean
	whether to trash.
	(internal_delete_file, Frename_file): Callers changed.
	(delete_by_moving_to_trash): Doc fix.
	(Fdelete_directory_internal): Don't move to trash.

	* callproc.c (delete_temp_file):
	* buffer.c (Fkill_buffer): Callers changed.

	* lisp.h: Update prototype.

2010-05-27  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (redisplay_window): After redisplay, check if point is
	still valid before setting it (Bug#6177).

2010-05-27  Glenn Morris  <rgm@gnu.org>

	* Makefile.in, autodeps.mk, deps.mk, ns.mk:
	Convert comments to Makefile format.

	* Makefile.in (bootstrap-clean): No more Makefile.c.

2010-05-26  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (YMF_PASS_LDFLAGS): Remove.
	(temacs${EXEEXT}): Use PRE_EDIT_LDFLAGS, POST_EDIT_LDFLAGS.

	* Makefile.in (NS_IMPL_GNUSTEP_INC, NS_IMPL_GNUSTEP_TEMACS_LDFLAGS):
	Remove.