@@ -1,3 +1,8 @@
+2010-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* sysdep.c (child_setup_tty): Move the non-canonical initialization to
+	the HAVE_TERMIO where it belongs (bug#6149).
+
 2010-05-30  Eli Zaretskii  <eliz@gnu.org>
 
 	* bidi.c (bidi_move_to_visually_next): Make sure the sentinel
